Introduce concept of command line arguments by properties files.